--- a/config.inc.json
+++ b/config.inc.json
@@ -8,7 +8,8 @@
       "count": "auto"
     },
     "candidate": "Indev",
-    "version": "0.0.1"
+    "version": "0.0.1",
+    "color": 39423
   },
   "db": {
     "host": "",
