--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@discordjs/opus": "^0.3.2",
     "date-utils": "^1.2.21",
     "discord.js": "^12.2.0",
+    "moment": "^2.26.0",
+    "moment-duration-format": "^2.3.2",
     "mysql2": "^2.1.0",
+    "os-utils": "^0.0.14",
     "ulangts": "^1.0.6",
     "uuniquets": "^1.0.0",
     "winston": "^3.2.1",
