--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "GPL-3.0-or-later",
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "prestart": "tsc",
+    "start": "cd build && node index.js"
   },
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
@@ -23,6 +24,9 @@
     "winston-daily-rotate-file": "^4.4.2"
   },
   "devDependencies": {
+    "@types/node": "^14.0.11",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
     "eslint": "^7.1.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
